fixed when added objects section was empty, the title was still showing

--- a/src/app/add-recipe/add-recipe.component.html
+++ b/src/app/add-recipe/add-recipe.component.html
@@ -94,7 +94,7 @@
         	<!-- Ingredients -->
             <section class="add-recipe-section tabs-container">
             	<h2>מצרכים</h2>
-            	<div class="form-group">
+            	<div>
 					<input id="ingredient-tab1" type="radio" name="ingredient-tabs" checked>
 					<label class="tab" for="ingredient-tab1">ע"י הדבקה</label>
 
@@ -155,7 +155,7 @@
     		<!-- Directions -->
             <section class="add-recipe-section tabs-container">
             	<h2>שלבי הכנה</h2>
-            	<div class="form-group">
+            	<div>
 					<input id="directions-tab1" type="radio" name="directions-tabs" checked>
 					<label class="tab" for="directions-tab1">ע"י הדבקה</label>
 
