--- a/src/app/add-recipe/add-recipe.component.scss
+++ b/src/app/add-recipe/add-recipe.component.scss
@@ -35,9 +35,8 @@ form {
 
 .new-category {
 	padding: 1.25rem 0 0.25rem 0;
-    margin: 1.25rem 0;
+    margin: 1.25rem 0 0;
     border-top: 1px solid $border-color;
-    border-bottom: 1px solid $border-color;
 }
 .new-category .select { display: inline-block; width: 30%; margin-right: 1rem; }
 
