--- a/src/app/added-properties/added-properties.component.scss
+++ b/src/app/added-properties/added-properties.component.scss
@@ -5,6 +5,10 @@
 
 .added-properties-container {
 
+	margin-top: 0.75rem;
+	border-top: 1px solid #DEDEDE;
+	padding-top: 1.25rem;
+
 	h3 {
 		font-size: 1.125rem;
 	}
