--- a/src/app/added-properties/added-properties.component.html
+++ b/src/app/added-properties/added-properties.component.html
@@ -1,18 +1,18 @@
-<!-- TODO: change all spacing to rem from px -->
 <!-- TODO: BUG: add new category -> add ingredient -> remove the ingredient -> the category ul is still visible -->
-<section class="added-properties-container" [class.added-ingredients]="isIngredientsType" [class.added-directions]="!isIngredientsType" *ngIf="addedObjects">
+<section class="added-properties-container" [class.added-ingredients]="isIngredientsType" [class.added-directions]="!isIngredientsType" *ngIf="!isEmptyAddedObjects()">
 	<h2>{{ title }} שהוספו</h2>
-	<div *ngFor="let categoryName of objectKeys(addedObjects)">
-		<h3 class="{{ categoryName }}" *ngIf="categoryName != 'כללי'">{{ categoryName }}</h3>
-		<ul *ngIf="addedObjects[categoryName]" dnd-sortable-container [sortableData]="addedObjects[categoryName]">
-			<li *ngFor="let addedObject of addedObjects[categoryName]; let i = index" dnd-sortable [sortableIndex]="i" [dragData]="addedObjects[categoryName]" (onDropSuccess)="moveObject($event, i)">
-				<input type="text" [(ngModel)]="addedObject.title" class="form-control" name="addedObjectTitle" value="{{ addedObject.title }}">
-				<input *ngIf="isIngredientsType" type="text" [(ngModel)]="addedObject.quantity" class="form-control" name="addedObjectQty" value="{{ addedObject.quantity }}">
-				<app-select-units *ngIf="isIngredientsType" [units]="units" [addedIngredient]="addedObject" [selectedUnit]="addedObject.unit" (selectedUnitChanged)="selectedUnitChanged($event)"></app-select-units>
-				<button class="handle" title="העבר"><i class="fas fa-bars"></i></button>
-				<button class="delete" title="מחק" (click)="removeObject(categoryName, addedObject)"><i class="fas fa-minus"></i></button>
-			</li>
-		</ul>
-	</div>
-	
+	<ng-container *ngFor="let categoryName of objectKeys(addedObjects)">
+		<div *ngIf="addedObjects[categoryName] && addedObjects[categoryName].length">
+			<h3 class="{{ categoryName }}" *ngIf="categoryName != 'כללי'">{{ categoryName }}</h3>
+			<ul dnd-sortable-container [sortableData]="addedObjects[categoryName]">
+				<li *ngFor="let addedObject of addedObjects[categoryName]; let i = index" dnd-sortable [sortableIndex]="i" [dragData]="addedObjects[categoryName]" (onDropSuccess)="moveObject($event, i)">
+					<input type="text" [(ngModel)]="addedObject.title" class="form-control" name="addedObjectTitle" value="{{ addedObject.title }}">
+					<input *ngIf="isIngredientsType" type="text" [(ngModel)]="addedObject.quantity" class="form-control" name="addedObjectQty" value="{{ addedObject.quantity }}">
+					<app-select-units *ngIf="isIngredientsType" [units]="units" [addedIngredient]="addedObject" [selectedUnit]="addedObject.unit" (selectedUnitChanged)="selectedUnitChanged($event)"></app-select-units>
+					<button class="handle" title="העבר"><i class="fas fa-bars"></i></button>
+					<button class="delete" title="מחק" (click)="removeObject(categoryName, addedObject)"><i class="fas fa-minus"></i></button>
+				</li>
+			</ul>
+		</div>
+	</ng-container>
 </section>
