--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,3 @@
 <h1>Our Recipe app is Working!</h1>
 <button type="button" class="btn btn-primary" routerLink="/add-recipe">Add Recipe</button>
+<button type="button" class="btn btn-primary" routerLink="/recipes">Recipes List</button>
