save original images names with modifier remove old named images fixed images not loading on recipe list

--- a/src/app/recipes-list/recipes-list.component.html
+++ b/src/app/recipes-list/recipes-list.component.html
@@ -14,7 +14,7 @@
 				    </div>
 			    </a>
 			    <a routerLink="/recipe/{{ recipe._id }}" href="/recipe/{{ recipe._id }}">
-			    	<img src="assets/images/{{ recipe.images[0] }}" alt="{{ recipe.title }}">	
+			    	<img src="/assets/images/{{ recipe.images[0] }}" alt="{{ recipe.title }}">	
 			    </a>
 			    
 			</div>
